[package]
name = "authentik-rust"
version = "0.0.1"
authors = ["e.fernau@efero.de", "hello@goauthentik.io"]
description = "Making authentication simple."
homepage = "https://github.com/efernau/authentik-rust"
documentation = "https://github.com/efernau/authentik-rust"
repository = "https://github.com/efernau/authentik-rust"
readme = "README.md"
keywords = ["authentik", "api"]
categories = ["api-bindings", "authentication"]
license = "MIT"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^2.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
